; ModuleID = '/home/carl/AnghaBench/git/extr_commit-graph.c_fill_commit_graph_info.c'
source_filename = "/home/carl/AnghaBench/git/extr_commit-graph.c_fill_commit_graph_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.commit = type { i32, i64 }
%struct.commit_graph = type { i64, i8*, i32, %struct.commit_graph* }

@GRAPH_DATA_WIDTH = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.commit*, %struct.commit_graph*, i64)* @fill_commit_graph_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fill_commit_graph_info(%struct.commit* %0, %struct.commit_graph* %1, i64 %2) #0 {
  %4 = alloca %struct.commit*, align 8
  %5 = alloca %struct.commit_graph*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store %struct.commit* %0, %struct.commit** %4, align 8
  store %struct.commit_graph* %1, %struct.commit_graph** %5, align 8
  store i64 %2, i64* %6, align 8
  br label %9

9:                                                ; preds = %15, %3
  %10 = load i64, i64* %6, align 8
  %11 = load %struct.commit_graph*, %struct.commit_graph** %5, align 8
  %12 = getelementptr inbounds %struct.commit_graph, %struct.commit_graph* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp slt i64 %10, %13
  br i1 %14, label %15, label %19

15:                                               ; preds = %9
  %16 = load %struct.commit_graph*, %struct.commit_graph** %5, align 8
  %17 = getelementptr inbounds %struct.commit_graph, %struct.commit_graph* %16, i32 0, i32 3
  %18 = load %struct.commit_graph*, %struct.commit_graph** %17, align 8
  store %struct.commit_graph* %18, %struct.commit_graph** %5, align 8
  br label %9

19:                                               ; preds = %9
  %20 = load i64, i64* %6, align 8
  %21 = load %struct.commit_graph*, %struct.commit_graph** %5, align 8
  %22 = getelementptr inbounds %struct.commit_graph, %struct.commit_graph* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = sub nsw i64 %20, %23
  store i64 %24, i64* %8, align 8
  %25 = load %struct.commit_graph*, %struct.commit_graph** %5, align 8
  %26 = getelementptr inbounds %struct.commit_graph, %struct.commit_graph* %25, i32 0, i32 1
  %27 = load i8*, i8** %26, align 8
  %28 = load i64, i64* @GRAPH_DATA_WIDTH, align 8
  %29 = load i64, i64* %8, align 8
  %30 = mul nsw i64 %28, %29
  %31 = getelementptr inbounds i8, i8* %27, i64 %30
  store i8* %31, i8** %7, align 8
  %32 = load i64, i64* %6, align 8
  %33 = load %struct.commit*, %struct.commit** %4, align 8
  %34 = getelementptr inbounds %struct.commit, %struct.commit* %33, i32 0, i32 1
  store i64 %32, i64* %34, align 8
  %35 = load i8*, i8** %7, align 8
  %36 = load %struct.commit_graph*, %struct.commit_graph** %5, align 8
  %37 = getelementptr inbounds %struct.commit_graph, %struct.commit_graph* %36, i32 0, i32 2
  %38 = load i32, i32* %37, align 8
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i8, i8* %35, i64 %39
  %41 = getelementptr inbounds i8, i8* %40, i64 8
  %42 = call i32 @get_be32(i8* %41)
  %43 = ashr i32 %42, 2
  %44 = load %struct.commit*, %struct.commit** %4, align 8
  %45 = getelementptr inbounds %struct.commit, %struct.commit* %44, i32 0, i32 0
  store i32 %43, i32* %45, align 8
  ret void
}

declare dso_local i32 @get_be32(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
